<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jfY-ww-63u">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="Quicksand-Bold.ttf">
            <string>Quicksand-Bold</string>
        </array>
    </customFonts>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tW6-T1-pj3">
            <objects>
                <viewController modalPresentationStyle="fullScreen" id="jfY-ww-63u" customClass="LoginViewController" customModule="FoodieFun" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="6gW-G9-6Xf">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="Ttq-1j-c8n">
                                <rect key="frame" x="20" y="301.5" width="374" height="293.5"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FoodieFun" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JTH-np-8N7">
                                        <rect key="frame" x="103" y="0.0" width="168.5" height="42.5"/>
                                        <fontDescription key="fontDescription" name="Quicksand-Bold" family="Quicksand" pointSize="34"/>
                                        <color key="textColor" red="0.91372549020000005" green="0.14117647059999999" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Kv8-Vr-b13">
                                        <rect key="frame" x="0.0" y="82.5" width="374" height="138"/>
                                        <subviews>
                                            <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zpJ-L1-vny">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CPq-5l-pQV">
                                                <rect key="frame" x="0.0" y="54" width="374" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ftb-9q-U4R">
                                                <rect key="frame" x="0.0" y="108" width="374" height="30"/>
                                                <color key="backgroundColor" red="0.3294117647" green="0.56078431370000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                <state key="normal" title="LOG IN">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="login:" destination="jfY-ww-63u" eventType="touchUpInside" id="lD5-rS-szh"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstItem="ftb-9q-U4R" firstAttribute="leading" secondItem="Kv8-Vr-b13" secondAttribute="leading" id="JSV-jb-4RZ"/>
                                            <constraint firstItem="CPq-5l-pQV" firstAttribute="leading" secondItem="Kv8-Vr-b13" secondAttribute="leading" id="QXQ-eo-YQa"/>
                                            <constraint firstItem="zpJ-L1-vny" firstAttribute="leading" secondItem="Kv8-Vr-b13" secondAttribute="leading" id="aGf-e4-lnM"/>
                                        </constraints>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="OYx-dr-8lz">
                                        <rect key="frame" x="64.5" y="260.5" width="245.5" height="33"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account? " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mni-nr-pyZ">
                                                <rect key="frame" x="0.0" y="0.0" width="183.5" height="33"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cvD-p9-bvr">
                                                <rect key="frame" x="184.5" y="0.0" width="61" height="33"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <state key="normal" title="Sign Up">
                                                    <color key="titleColor" red="0.3294117647" green="0.56078431370000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <segue destination="4IG-jR-h02" kind="presentation" identifier="SignUpSegue" modalPresentationStyle="fullScreen" id="uew-Rr-GJY"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="Kv8-Vr-b13" firstAttribute="leading" secondItem="Ttq-1j-c8n" secondAttribute="leading" id="hlJ-ja-PMZ"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="0.94901960784313721" green="0.89411764705882346" blue="0.792156862745098" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="Ttq-1j-c8n" firstAttribute="centerY" secondItem="6gW-G9-6Xf" secondAttribute="centerY" id="F6z-nB-Utc"/>
                            <constraint firstItem="Ttq-1j-c8n" firstAttribute="leading" secondItem="7iA-r4-HmG" secondAttribute="leading" constant="20" id="YNh-k0-OS3"/>
                            <constraint firstItem="7iA-r4-HmG" firstAttribute="trailing" secondItem="Ttq-1j-c8n" secondAttribute="trailing" constant="20" id="mdc-dI-Dzs"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="7iA-r4-HmG"/>
                    </view>
                    <connections>
                        <outlet property="passwordTextField" destination="CPq-5l-pQV" id="6fL-Oq-Nop"/>
                        <outlet property="signinButton" destination="ftb-9q-U4R" id="Ffc-Xa-mu8"/>
                        <outlet property="usernameTextField" destination="zpJ-L1-vny" id="xkt-kg-FhB"/>
                        <segue destination="T9h-dh-9rZ" kind="presentation" identifier="DashboardSegue" modalPresentationStyle="fullScreen" id="71o-cq-tjN"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="2Oo-m2-eU1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="458" y="720"/>
        </scene>
        <!--Dashboard-->
        <scene sceneID="Wtr-W6-UV5">
            <objects>
                <viewControllerPlaceholder storyboardName="Dashboard" id="T9h-dh-9rZ" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="8tU-Mt-0xc"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="aPS-QD-5o1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1081" y="704"/>
        </scene>
        <!--SignUp-->
        <scene sceneID="gmj-DJ-8Nk">
            <objects>
                <viewControllerPlaceholder storyboardName="SignUp" id="4IG-jR-h02" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="nrT-AA-NjU"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Cdv-Ed-i3G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1064" y="737"/>
        </scene>
    </scenes>
</document>
