...
            <point key="canvasLocation" x="2578" y="-940"/>
        </scene>
        <!--Add-->
        <scene sceneID="Axa-XW-hWQ">
            <objects>
                <navigationController id="iP5-SP-DzS" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Add" image="plus" catalog="system" id="Deg-o5-gz7">
                        <color key="badgeColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBarItem>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="Zcj-YR-mLJ">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RESTAURANT NAME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDI-Ra-hPo">
                                                        <rect key="frame" x="0.0" y="0.0" width="138.33333333333334" height="17"/>
                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="McDonald's, PF Chang's, Red Lobster" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="COF-hZ-5Ud">
                                                        <rect key="frame" x="0.0" y="25" width="374" height="34"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                </subviews>
                                                <constraints>
...
                            <constraint firstItem="Loa-kd-6C6" firstAttribute="bottom" secondItem="Zq9-ad-IUv" secondAttribute="bottom" id="Kft-hI-fnN"/>
                            <constraint firstAttribute="trailing" secondItem="Zq9-ad-IUv" secondAttribute="trailing" id="Pb6-Mc-Rcr"/>
                            <constraint firstItem="Zq9-ad-IUv" firstAttribute="top" secondItem="Loa-kd-6C6" secondAttribute="top" id="iDz-YR-3bk"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Loa-kd-6C6"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add a Restaurant" id="y3I-kY-flT">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="RYx-IQ-EjT">
                            <color key="tintColor" red="0.3294117647" green="0.56078431370000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="cancelPressed:" destination="o5o-P7-XDR" id="0g6-so-rai"/>
                            </connections>
                        </barButtonItem>
...
