...
        // check if all textfields are filled
        guard let username = self.usernameTextField.text, !username.isEmpty,
              let password = self.passwordTextField.text, !password.isEmpty,
              let confirmPassword = self.confirmPasswordTextField.text, !confirmPassword.isEmpty,
              let email = self.emailTextField.text, !email.isEmpty,
              let location = self.locationTextField.text, !location.isEmpty else {
                let alert = UIAlertController(title: "Missing some fields",
                                              message: "Check your information and try again.",
                                              preferredStyle: .alert)
                alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
                self.present(alert, animated: true, completion: nil)
                return
        }
...
