...
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tUe-38-0oa">
                                                <rect key="frame" x="0.0" y="270" width="374" height="30"/>
                                                <color key="backgroundColor" red="0.3294117647" green="0.56078431370000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                <state key="normal" title="SIGN UP">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="signUpPressed:" destination="mSi-wn-acM" eventType="touchUpInside" id="04n-xh-Ec1"/>
                                                </connections>
                                            </button>
...
